--- a/examples/gen_load_training_data.ipynb
+++ b/examples/gen_load_training_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from orbitflows.funct import DataLoader"
+    "from orbitflows.util import DataLoader"
    ]
   },
   {
@@ -263,7 +263,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML_Dyn",
+   "display_name": "MLDyn",
    "language": "python",
    "name": "python3"
   },
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
