add rk4 correction step. Investigate how its performance compares to euler step.

--- a/examples/test_stuff.ipynb
+++ b/examples/test_stuff.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
     "    _aa[..., 0] = theta_set.clone()\n",
     "    return model.frequency(_aa)\n",
     "\n",
-    "def hamiltonian_tilde(ps, theta_set):\n",
+    "def hamiltonian_fixed_angle(ps, theta_set):\n",
     "    aa = model.ps_to_aa(ps)\n",
     "    _aa = aa.clone()\n",
     "    _aa[..., 0] = theta_set.clone()\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,11 +376,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def integrate_with_correction(aa0, n_steps, t_end, correction_funct = eulerstep, **kwargs):\n",
+    "def integrate_with_correction(aa0, n_steps, t_end, correction_funct = eulerstep, hamiltonian_tilde= hamiltonian_fixed_angle, **kwargs):\n",
     "    '''Routine to integrate orbits in AA space and update frequencies regularly, with euler step correction\n",
     "    \n",
     "    Parameters\n",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,14 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:04<00:00, 23.83it/s]\n"
+      "100%|██████████| 100/100 [00:04<00:00, 23.44it/s]\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "Text(0, 0.5, 'energy')"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     },
