Rearrange methods. Add MappingModels base class. Test correction step functions.

--- a/examples/tutorials/gen_load_training_data.ipynb
+++ b/examples/tutorials/gen_load_training_data.ipynb
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from orbitflows.util import DataLoader"
+    "from orbitflows.utils import DataLoader"
    ]
   },
   {
