--- a/orbitflows/model/potential_ex.ipynb
+++ b/orbitflows/model/potential_ex.ipynb
@@ -214,9 +214,30 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "24e6f23e",
+   "metadata": {},
+   "source": [
+    "# Euler versus RK4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "03bc5249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from galpy.potential import IsothermalDiskPotential\n",
+    "pot = IsothermalDiskPotential()\n",
+    "euler = Orbit([1, 0])\n",
+    "euler.integrate(np.linspace(0, 1, 100), pot, method='euler')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34ceb58b",
    "metadata": {},
    "outputs": [],
    "source": []
